--- a/templates/login.html
+++ b/templates/login.html
@@ -83,24 +83,16 @@
             </aside>
         
           <main class="main-content position-relative max-height-vh-100 h-100 mt-1 border-radius-lg ">
-            <form action = "/register" method = "POST">
+            <form action = "/login" method = "POST">
               <div class="form-outline mb-4">
                 <input type="text" id="form2Example2" class="form-control" name = "username"/>
                 <label class="form-label" for="form2Example2">Username</label>
               </div>
               <div class="form-outline mb-4">
-                <input type="email" id="form2Example1" class="form-control" name = "email" />
-                <label class="form-label" for="form2Example1">Email address</label>
-              </div>
-              <div class="form-outline mb-4">
                 <input type="password" id="form2Example2" class="form-control" name = "password" />
                 <label class="form-label" for="form2Example2">Password</label>
               </div>
-              <div class="form-outline mb-4">
-                <input type="password" id="form2Example2" class="form-control" name = "confirm_password" />
-                <label class="form-label" for="form2Example2">Confirm password</label>
-              </div>
-              <button type="submit" class="btn btn-primary btn-block mb-4">Register</button>
+              <button type="submit" class="btn btn-primary btn-block mb-4">Log in</button>
             </form>
           </main>
         </div>
