--- a/templates/general_chat.html
+++ b/templates/general_chat.html
@@ -14,6 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.3/socket.io.js" integrity="sha512-iWPnCISAd/J+ZacwV2mbNLCaPGRrRo5OS81lKTVPtRg1wGTC20Cfmp5Us5RcbLv42QLdbAWl0MI57yox5VecQg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   </head>
   <body>
     <div class="wrapper">
@@ -55,7 +58,7 @@
                     <span class="nav-link-text ms-1">Explore</span>
                   </a>
                 </li>
-               {% if session.authenticated %}
+                {% if session.authenticated %}
                   <li class="nav-item">
                     <a class="nav-link  {% block active_project %}{% endblock %}" href="{{ url_for('logout')}}">
                       
@@ -82,28 +85,30 @@
               </div>
             </aside>
         
-          <main class="main-content position-relative max-height-vh-100 h-100 mt-1 border-radius-lg ">
-            <form action = "/register" method = "POST">
-              <div class = "container">
-                <div class="form-outline mb-4">
-                  <input type="text" id="form2Example2" class="form-control" name = "username"/>
-                  <label class="form-label" for="form2Example2">Username</label>
-                </div>
-                <div class="form-outline mb-4">
-                  <input type="email" id="form2Example1" class="form-control" name = "email" />
-                  <label class="form-label" for="form2Example1">Email address</label>
-                </div>
-                <div class="form-outline mb-4">
-                  <input type="password" id="form2Example2" class="form-control" name = "password" />
-                  <label class="form-label" for="form2Example2">Password</label>
-                </div>
-                <div class="form-outline mb-4">
-                  <input type="password" id="form2Example2" class="form-control" name = "confirm_password" />
-                  <label class="form-label" for="form2Example2">Confirm password</label>
-                </div>
-                <button type="submit" class="btn btn-primary btn-block mb-4">Register</button>
-              </div>
-            </form>
+          <main class="main-content possition-relative max-height-vh-100 h-100 mt-1 border-radius-lg ">
+            <div class = "container" id = "messages">
+              <input type = "text" id = "message" placeholder="Message" required>
+              <button class="btn btn-primary btn-block mb-4" id = "sendMessage">Send</button>
+              <script type="text/javascript">
+                $(document).ready(function() {
+                  var socket = io.connect('http://' + document.domain + ':' + location.port)
+                  socket.on('connect', function() {
+                    socket.send('user connected');
+                  });
+
+                  socket.on('message', function(data) {
+                    $('#messages').append($('<p>').text(data));
+                  });
+
+                  $('#sendMessage').on('click', function() {
+                    if ($('#message').val().length > 0) {
+                      socket.send("{{session['username']}}" + ': ' + $('#message').val());
+                      $('#message').val('');
+                    };
+                 });
+                })
+              </script>
+            </div>
           </main>
         </div>
       </div>
