--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.3/socket.io.js" integrity="sha512-iWPnCISAd/J+ZacwV2mbNLCaPGRrRo5OS81lKTVPtRg1wGTC20Cfmp5Us5RcbLv42QLdbAWl0MI57yox5VecQg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   </head>
   <body>
     <div class="wrapper">
@@ -28,10 +31,11 @@
                 
                 <div class="place-right collapse navbar-collapse">
                   
-                  <button class="btn btn-dark dm-dtn" id="registr">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 20 20">
+                  <button class="btn btn-dark dm-dtn" id="registr" style="color: #ffffff;">
+                    <a href="{{ url_for('register') }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 20 20">
                       <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
                     </svg>
+                  </a>
                   </button>
                   <button type="button" name="button" class="btn btn-dark">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 20 20">
@@ -46,35 +50,68 @@
       <div id="title" class="main_block">
         <div class="conteiner parent">
           <aside class="navbar-vertical navbar-expand-xs border-radius-xl my-3 ps bg-menu " id="sidenav-main">
-
-            <hr class="horizontal dark mt-0">
-            <div class="collapse navbar-collapse  w-auto" id="sidenav-collapse-main">
+            <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
               <ul class="navbar-nav">
+                <div class="hover-link">
                 <li class="nav-item">
                   <a class="nav-link {% block active_home %}{% endblock %}" href="{{ url_for('home') }}"> 
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hash" viewBox="0 0 16 16">
+                      <path d="M8.39 12.648a1.32 1.32 0 0 0-.015.18c0 .305.21.508.5.508.266 0 .492-.172.555-.477l.554-2.703h1.204c.421 0 .617-.234.617-.547 0-.312-.188-.53-.617-.53h-.985l.516-2.524h1.265c.43 0 .618-.227.618-.547 0-.313-.188-.524-.618-.524h-1.046l.476-2.304a1.06 1.06 0 0 0 .016-.164.51.51 0 0 0-.516-.516.54.54 0 0 0-.539.43l-.523 2.554H7.617l.477-2.304c.008-.04.015-.118.015-.164a.512.512 0 0 0-.523-.516.539.539 0 0 0-.531.43L6.53 5.484H5.414c-.43 0-.617.22-.617.532 0 .312.187.539.617.539h.906l-.515 2.523H4.609c-.421 0-.609.219-.609.531 0 .313.188.547.61.547h.976l-.516 2.492c-.008.04-.015.125-.015.18 0 .305.21.508.5.508.265 0 .492-.172.554-.477l.555-2.703h2.242l-.515 2.492zm-1-6.109h2.266l-.515 2.563H6.859l.532-2.563z"/>
+                    </svg>
                     <span class="nav-link-text ms-1">Explore</span>
                   </a>
                 </li>
+              </div>
                 {% if session.authenticated %}
+                <li class="nav-item mt-3">
+                  <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
+                </li>
+                <div class="hover-link">
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('user_page', user_id=session.uid) }}">
+                    
+                    <span class="nav-link-text ms-1"></span>
+                  {{session.username | capitalize}}</a></li>
+                  </div>
+                  <div class="hover-link">
+                    <li class="nav-item">
+                      <a class="nav-link  " href="{{ url_for('messenger')}}">
+                        
+                        <span class="nav-link-text ms-1">Messenger</span>
+                      </a>
+                    </li>
+                    </div>
+                  <div class="hover-link">
                   <li class="nav-item">
-                    <a class="nav-link  {% block active_project %}{% endblock %}" href="{{ url_for('logout')}}">
+                    <a class="nav-link" href="{{ url_for('logout')}}">
                       
                       <span class="nav-link-text ms-1">Logout</span>
                     </a>
                   </li>
-
-                  <li class = "nav-item"><a class="nav-link scrollto" href="{{ url_for('post_upload')}}"><span class="nav-link-text ms-1">Upload post</span></a></li>
+                  </div>
                   {% else %}
+                  <div class="hover-link">
                   <li class="nav-item">
                     <a class="nav-link  {% block active_si %}{% endblock %}" href="{{ url_for('login') }}">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
+                        <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                      </svg>
                       <span class="nav-link-text ms-1">Login</span>
                     </a>
                   </li>
+                </div>
+                <div class="hover-link">
                   <li class="nav-item">
                     <a class="nav-link  {% block active_su %}{% endblock %}" href="{{ url_for('register') }}">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
+                        <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                        <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
+                      </svg>
                       <span class="nav-link-text ms-1">Register</span>
                     </a>
                   </li>
+                </div>
                   {% endif %}
                 </li>
                 
@@ -83,26 +120,22 @@
               </div>
             </aside>
         
-          <main class="main-content position-relative max-height-vh-100 h-100 mt-1 border-radius-lg ">
-            {% if session.authenticated %}
-            <div class = "container my-5">
-              <div class = "row align-items-center">
-                <div class = "col">
-                  {% if posts %}
-                    {% for post in posts %}
-                    <div class = "card my-3" style = "color: black; width:  18rem;">
-                      <img src = "{{ url_for('static', filename = 'files/' + post.post_username + '/' + post.post_media_name) }}" class = "card-img-top">
-                      <div class = "card-body">
-                        <h5 class = "card-title">{{ post.post_text }}</h5>
-                        <p class = "card-text">From {{ post.post_username }}</p>
-                      </div>
-                    </div>
-                    {% endfor %}
-                  {% endif %}
-                </div>
+          <main class="position-relative">
+            <!-- Navbar -->
+            <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
+              <div class="container-fluid py-1 px-3">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
+                    <li class="breadcrumb-item text-sm white-color">Pages</li>
+                    <li class="breadcrumb-item text-sm  active" aria-current="page">{% block name_page_1 %}{% endblock %}</li>
+                  </ol>
+                  <h6 class="font-weight-bolder mb-0">{% block name_page_2 %}{% endblock %}</h6>
+                </nav>
+                
               </div>
-            </div>
-            {% endif %}
+            </nav>
+            {% block main %}
+            {% endblock %}
           </main>
         </div>
       </div>
