--- a/templates/login.html
+++ b/templates/login.html
@@ -1,138 +1,61 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-    <title> 4you - your live</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='image/v_3_fav.svg') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/soft-ui-dashboard.css') }}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" type="text/css" href="css/style-a.css">
-    <script src="https://kit.fontawesome.com/f477db86cf.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  </head>
-  <body>
-    <div class="wrapper">
-      <!---   Header --->
-      <header>
-        <div class="conteiner">
-              <nav class="navbar navbar-expand-lg navbar-dark ">
-                <a class="navbar-brand" href="{{ url_for('home') }}" name="top">
-                  <img src="{{ url_for('static', filename='image/v_4_fav.svg') }}" width="50" height="30" class="d-inline-block align-top" alt="">
-                  <strong>  Your live </strong>
-                </a>
-                
-                <div class="place-right collapse navbar-collapse">
-                  
-                  <button class="btn btn-dark dm-dtn" id="registr">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 20 20">
-                      <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
-                    </svg>
-                  </button>
-                  <button type="button" name="button" class="btn btn-dark">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 20 20">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                  </svg>
-                  </button>
-                </div>
-              </nav>
-          </div>
-      </header>
-      <!---  MAIN  --->
-      <div id="title" class="main_block">
-        <div class="conteiner parent">
-          <aside class="navbar-vertical navbar-expand-xs border-radius-xl my-3 ps bg-menu " id="sidenav-main">
+{% extends 'base_sign.html' %}
 
-            <hr class="horizontal dark mt-0">
-            <div class="collapse navbar-collapse  w-auto" id="sidenav-collapse-main">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link {% block active_home %}{% endblock %}" href="{{ url_for('home') }}"> 
-                    <span class="nav-link-text ms-1">Explore</span>
-                  </a>
-                </li>
-                {% if session.authenticated %}
-                  <li class="nav-item">
-                    <a class="nav-link  {% block active_project %}{% endblock %}" href="{{ url_for('logout')}}">
-                      
-                      <span class="nav-link-text ms-1">Logout</span>
-                    </a>
-                  </li>
-                  <li class = "nav-item"><a class="nav-link scrollto" href="{{ url_for('post_upload')}}"><span class="nav-link-text ms-1">Upload post</span></a></li>
-                  {% else %}
-                  <li class="nav-item">
-                    <a class="nav-link  {% block active_si %}{% endblock %}" href="{{ url_for('login') }}">
-                      <span class="nav-link-text ms-1">Login</span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link  {% block active_su %}{% endblock %}" href="{{ url_for('register') }}">
-                      <span class="nav-link-text ms-1">Register</span>
-                    </a>
-                  </li>
-                  {% endif %}
-                </li>
-                
-                
-                </ul>
-              </div>
-            </aside>
-        
-          <main class="main-content position-relative max-height-vh-100 h-100 mt-1 border-radius-lg ">
-            <form action = "/login" method = "POST">
-              <div class = "container">
-                <div class="form-outline mb-4">
-                  <input type="text" id="form2Example2" class="form-control" name = "username"/>
-                  <label class="form-label" for="form2Example2">Username</label>
-                </div>
-                <div class="form-outline mb-4">
-                  <input type="password" id="form2Example2" class="form-control" name = "password" />
-                  <label class="form-label" for="form2Example2">Password</label>
-                </div>
-                <button type="submit" class="btn btn-primary btn-block mb-4">Log in</button>
-              </form>
+
+{% block main %}
+<main id="main-content mt-0">
+
+  
+
+  <section>
+    <div class="page-header min-vh-75">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column">
+          <div class="card card-plain mt-8">
+            <div class="card-header pb-0 text-left bg-transparent">
+              <h3 class="font-weight-bolder text-info text-gradient">Welcome back</h3>
+              <p class="mb-0">Enter your email and password to sign in</p>
             </div>
-          </main>
+            <div class="card-body">
+              <p>
+                {% if context%}
+                {{context}}
+                {% endif %}
+                <form action="{{ url_for('login')}}" method="POST" enctype="multipart/form-data">
+                    <label>Login</label>
+                    <div class="mb-3">
+                      <input type="text" class="form-control border-half" name="username" placeholder="Username" required>
+                    </div>
+                    <label>Password</label>
+                    <div class="mb-3">
+                      <input type="password" class="form-control border-half" name="password" placeholder="Password" required>
+                    </div>
+                    <div class="text-center">
+                      <input type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0 border-half" value="Sign in">
+                    </div>
+                </form> 
+              </p>
+            </div>
+            <div class="card-footer text-center pt-0 px-lg-2 px-1">
+              <p class="mb-4 text-sm mx-auto">
+                Don't have an account?
+                <a href="{{ url_for('register') }}" class="text-info text-gradient font-weight-bold">Sign up</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="">
+          <div class="oblique position-absolute top-0 h-100 d-md-block d-none me-n8">
+            <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image: url( {{ url_for('static', filename='image/vr-bg.jpg') }} )">
+            </div>
+          </div>
         </div>
       </div>
-      <!---  Footer   --->
-      <footer class="footer pt-3  ">
-        <div class="container">
-          <div class="row align-items-center justify-content-lg-between">
-            <div class="col-lg-6 mb-lg-0 mb-4">
-              <div class="copyright text-sm text-muted text-lg-start">
-                © <script>
-                  document.write(new Date().getFullYear())
-                </script>,
-                made by A.I.D.
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-                <li class="nav-item">
-                  <a href="#" class="nav-link text-muted" target="_blank">Creative Tim</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link text-muted" target="_blank">About Us</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link text-muted" target="_blank">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link pe-0 text-muted" target="_blank">License</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </footer>
     </div>
-    <script src="script/script.js" type="text/javascript">
-    </script>
-    <script src="script/a.js"></script>
-  </body>
-</html>
+  </div>
+</section>
+
+</main>
+
+{% endblock %}
+
