--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,7 +165,7 @@ body{
   .sidenav a {font-size: 18px;}
 }
 
-/* -- Header  and Base --*/
+/* -- Header --*/
 header{
   background-color: #060607 ;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
